--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@gik/eslint",
+    "name": "@gik/eslint-config-gik",
     "version": "0.0.1",
-    "description": "GIK's approach to EcmaScript",
+    "description": "GIK's general approach to EcmaScript",
     "license": "MIT",
     "homepage": "https://github.com/gikmx/eslint",
     "contributors": [
@@ -20,5 +20,27 @@
     },
     "bugs": {
         "url": "https://github.com/gikmx/eslint/issues"
+    },
+    "main": "rules/index.js",
+    "scripts": {
+        "editorconfig": "editorconfig-tools check rules/*",
+        "prelint": "npm run -s editorconfig",
+        "lint": "eslint rules/*",
+        "prepublishOnly": "npm run -s lint && safe-publish-latest"
+    },
+    "peerDependencies": {
+        "babel-eslint": "^8.0.0",
+        "eslint": "^4.7.2",
+        "eslint-plugin-import": "^2.7.0"
+    },
+    "dependencies": {
+        "eslint-config-airbnb-base": "^12.0.0"
+    },
+    "devDependencies": {
+        "babel-eslint": "^8.0.0",
+        "editorconfig-tools": "^0.1.1",
+        "eslint": "^4.7.2",
+        "eslint-plugin-import": "^2.7.0",
+        "safe-publish-latest": "^1.1.1"
     }
 }
