--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "editorconfig": "editorconfig-tools check rules/*",
         "prelint": "npm run -s editorconfig",
         "lint": "eslint rules/*",
-        "prepublishOnly": "npm run -s lint && safe-publish-latest"
+        "prepublishOnly": "npm run -s lint"
     },
     "peerDependencies": {
         "babel-eslint": "^8.0.0",
@@ -40,7 +40,6 @@
         "babel-eslint": "^8.0.0",
         "editorconfig-tools": "^0.1.1",
         "eslint": "^4.7.2",
-        "eslint-plugin-import": "^2.7.0",
-        "safe-publish-latest": "^1.1.1"
+        "eslint-plugin-import": "^2.7.0"
     }
 }
