--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gik/eslint-config",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "GIK's general approach to EcmaScript",
     "license": "MIT",
     "homepage": "https://github.com/gikmx/eslint",
@@ -29,17 +29,15 @@
         "prepublishOnly": "npm run -s lint"
     },
     "peerDependencies": {
-        "babel-eslint": "^8.0.0",
-        "eslint": "^4.7.2",
-        "eslint-plugin-import": "^2.7.0"
+        "eslint": "^4.7.2"
     },
     "dependencies": {
-        "eslint-config-airbnb-base": "^12.0.0"
+        "babel-eslint": "^8.0.0",
+        "eslint-config-airbnb-base": "^12.0.0",
+        "eslint-plugin-import": "^2.7.0"
     },
     "devDependencies": {
-        "babel-eslint": "^8.0.0",
         "editorconfig-tools": "^0.1.1",
-        "eslint": "^4.7.2",
-        "eslint-plugin-import": "^2.7.0"
+        "eslint": "^4.7.2"
     }
 }
