--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gik/eslint-config",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "GIK's general approach to EcmaScript",
     "license": "MIT",
     "homepage": "https://github.com/gikmx/eslint",
@@ -34,7 +34,8 @@
     "dependencies": {
         "babel-eslint": "^8.0.0",
         "eslint-config-airbnb-base": "^12.0.0",
-        "eslint-plugin-import": "^2.7.0"
+        "eslint-plugin-import": "^2.7.0",
+        "eslint-plugin-jsdoc": "^3.1.3"
     },
     "devDependencies": {
         "editorconfig-tools": "^0.1.1",
