--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gik/eslint-config",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "description": "GIK's general approach to EcmaScript",
     "license": "MIT",
     "homepage": "https://github.com/gikmx/eslint",
@@ -11,7 +11,7 @@
         "style guide",
         "lint",
         "eslint",
-        "es2017",
+        "es2018",
         "babel-eslint"
     ],
     "repository": {
@@ -32,10 +32,12 @@
         "eslint": "^4.7.2"
     },
     "dependencies": {
-        "babel-eslint": "^8.0.2",
-        "eslint-config-airbnb-base": "^12.1.0",
-        "eslint-plugin-import": "^2.8.0",
-        "eslint-plugin-jsdoc": "^3.2.0"
+        "babel-eslint": "^9.0.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsdoc": "^3.2.0",
+        "eslint-plugin-jsx-a11y": "^6.1.1",
+        "eslint-plugin-react": "^7.11.1"
     },
     "devDependencies": {
         "editorconfig-tools": "^0.1.1",
