--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gik/eslint-config",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "description": "GIK's general approach to EcmaScript",
     "license": "MIT",
     "homepage": "https://github.com/gikmx/eslint",
@@ -29,18 +29,16 @@
         "prepublishOnly": "npm run -s lint"
     },
     "peerDependencies": {
-        "eslint": "^5.6.1"
+        "eslint": "^5.7.0"
     },
     "dependencies": {
         "babel-eslint": "^10.0.1",
-        "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-airbnb-base": "^13.1.0",
         "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-jsdoc": "^3.2.0",
-        "eslint-plugin-jsx-a11y": "^6.1.1",
-        "eslint-plugin-react": "^7.11.1"
+        "eslint-plugin-jsdoc": "^3.2.0"
     },
     "devDependencies": {
         "editorconfig-tools": "^0.1.1",
-        "eslint": "^5.6.1"
+        "eslint": "^5.7.0"
     }
 }
